k8s/tenant/exporters.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: tenant-pisofire
  labels:
    app: postgres-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: prometheuscommunity/postgres-exporter:v0.15.0
          ports:
            - containerPort: 9187
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: tenant-pisofire
  labels:
    app: postgres-exporter
spec:
  selector:
    app: postgres-exporter
  ports:
    - name: metrics
      port: 9187
      targetPort: 9187
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: tenant-pisofire
  labels:
    app: redis-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: redis-exporter
          image: oliver006/redis_exporter:v1.62.0
          ports:
            - containerPort: 9121
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: tenant-pisofire
  labels:
    app: redis-exporter
spec:
  selector:
    app: redis-exporter
  ports:
    - name: metrics
      port: 9121
      targetPort: 9121
