k8s/tenant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront
  namespace: tenant-pisofire
spec:
  rules:
    - host: pisofire.deti
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa
  namespace: tenant-pisofire
spec:
  rules:
    - host: medusa-pisofire.deti
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medusa
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: tenant-pisofire
spec:
  rules:
    - host: minio-pisofire.deti
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
